# r1cs-tutorial

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
examples/: Cargo.toml
merkle-tree-example/: Cargo.toml  README.md
merkle-tree-example/src/: README.md  common.rs  constraints.rs  lib.rs
merkle_tree_example/: Cargo.toml
merkle_tree_example/src/: README.md  common.rs  constraints.rs  constraints_test.rs  lib.rs
rollup/: Cargo.toml  README.md
rollup/src/: account.rs  ledger.rs  lib.rs  rollup.rs  transaction.rs
simple-payments/: Cargo.toml  README.md
simple-payments/src/: account.rs  ledger.rs  lib.rs  transaction.rs
simple-payments/src/data_structures/: account.rs  ledger.rs
simple-payments/src/merkle_tree_example/: README.md  mod.rs  test.rs
simple-payments/src/random_oracle/: constraints.rs  mod.rs
simple-payments/src/random_oracle/blake2s/: constraints.rs  mod.rs
simple-payments/src/signature/: constraints.rs  mod.rs
simple-payments/src/signature/schnorr/: constraints.rs  mod.rs
src/: lib.rs
src/data_structures/: account.rs  ledger.rs  ledger_parameters.rs  mod.rs  transaction.rs
src/merkle_tree_example/: mod.rs
src/signature/schnorr/: constraints.rs  mod.rs
