[package]
name = "merkle_tree_example"
version = "0.1.0"
authors = ["arkworks contributors"]
edition = "2018"

[dependencies]
ark-ff = { version = "^0.2.0", default-features = false }
ark-ec = { version = "^0.2.0", default-features = false }
ark-ed-on-bls12-381 = { version = "^0.2.0", features = ["r1cs"] }
ark-bls12-381 = { version = "^0.2.0", default-features = false }
ark-std = { version = "^0.2.0", default-features = false }
ark-relations = { version = "^0.2.0", default-features = false, optional = true }

ark-r1cs-std = { version = "^0.2.0", optional = true, default-features = false }
ark-snark = { version = "^0.2.0", default-features = false }

ark-serialize = { version = "^0.2.0", default-features = false }

ark-crypto-primitives = { git = "https://github.com/arkworks-rs/crypto-primitives", branch = "main", default-features = true }
